--- a/package.json
+++ b/package.json
@@ -3,28 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "type": "module",
   "scripts": {
-    "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/anderOkgo/animeapi.git"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/anderOkgo/animeapi/issues"
-  },
-  "homepage": "https://github.com/anderOkgo/animeapi#readme",
-  "devDependencies": {
-    "@types/express": "^4.17.17",
-    "nodemon": "^2.0.20",
-    "typescript": "^4.9.5"
-  },
-  "dependencies": {
-    "express": "4.18.2"
-  }
+  "license": "ISC"
 }
