--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "mysql": "^2.18.1"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.1",
     "@types/mysql": "^2.15.21"
   }
 }
