--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "servers": " cmd /c tsc -w | nodemon dist/index.js"
+    "servers": " cmd /c tsc -w | nodemon dist/index.js",
+    "up": "call com/db-sync-FTP-both.bat"
   },
   "keywords": [],
   "author": "",
