--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "servers": " cmd /c tsc -w | nodemon dist/index.js",
     "up": "call com/db-sync-FTP-both.bat"
   },
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@babel/preset-env": "^7.22.9",
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
@@ -21,10 +22,13 @@
     "nodemon": "^2.0.21"
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.22.5",
     "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/jest": "^29.5.3",
     "@types/jsonwebtoken": "^9.0.1",
-    "@types/mysql": "^2.15.21"
+    "@types/mysql": "^2.15.21",
+    "jest": "^29.6.2"
   }
 }
