--- a/package.json
+++ b/package.json
@@ -26,9 +26,10 @@
     "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
-    "@types/jest": "^29.5.3",
+    "@types/jest": "^29.5.5",
     "@types/jsonwebtoken": "^9.0.1",
     "@types/mysql": "^2.15.21",
-    "jest": "^29.6.2"
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.1"
   }
 }
