--- a/package.json
+++ b/package.json
@@ -30,6 +30,6 @@
     "@types/jsonwebtoken": "^9.0.1",
     "@types/mysql": "^2.15.21",
     "jest": "^29.7.0",
-    "ts-jest": "^29.1.1"
+    "supertest": "^6.3.3"
   }
 }
