--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "mysql": "^2.18.1",
-    "nodemon": "^2.0.21"
+    "node-cron": "^3.0.3",
+    "nodemon": "^3.0.1"
   },
   "devDependencies": {
     "@babel/preset-typescript": "^7.22.5",
@@ -29,6 +30,7 @@
     "@types/jest": "^29.5.5",
     "@types/jsonwebtoken": "^9.0.1",
     "@types/mysql": "^2.15.21",
+    "@types/node-cron": "^3.0.11",
     "jest": "^29.7.0",
     "supertest": "^6.3.3"
   }
