--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "jsonwebtoken": "^9.0.0",
     "mysql": "^2.18.1",
     "node-cron": "^3.0.3",
+    "nodemailer": "^6.9.13",
     "nodemon": "^3.0.1"
   },
   "devDependencies": {
@@ -32,6 +33,7 @@
     "@types/jsonwebtoken": "^9.0.1",
     "@types/mysql": "^2.15.21",
     "@types/node-cron": "^3.0.11",
+    "@types/nodemailer": "^6.4.15",
     "jest": "^29.7.0",
     "supertest": "^6.3.3"
   }
