--- a/package.json
+++ b/package.json
@@ -13,16 +13,23 @@
   "license": "ISC",
   "dependencies": {
     "@babel/preset-env": "^7.22.9",
+    "@types/multer": "^2.0.0",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.8",
     "axios": "^1.6.2",
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
+    "multer": "^2.0.2",
     "mysql": "^2.18.1",
     "node-cron": "^3.0.3",
     "nodemailer": "^6.9.13",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "sharp": "^0.30.7",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
     "@babel/preset-typescript": "^7.22.5",
@@ -34,8 +41,9 @@
     "@types/mysql": "^2.15.21",
     "@types/node-cron": "^3.0.11",
     "@types/nodemailer": "^6.4.15",
+    "@types/sharp": "^0.31.1",
     "jest": "^29.7.0",
     "supertest": "^6.3.3",
-    "typescript": "^5.5.2"
+    "typescript": "^4.9.5"
   }
 }
